--- a/Unitop.vn/Front-end/lesson/html/form-hidden.html
+++ b/Unitop.vn/Front-end/lesson/html/form-hidden.html
@@ -9,7 +9,7 @@
     <h1>nhap du lieu ngam</h1>
     <form action="">
         <label for="user-name">login-name</label><br>
-        <input type="text" name="user-name" placeholder="ten dang nhap" id="user-name"><br>
+        <input type="text" name="user-name" placeholder="ten dang nhap test" id="user-name"><br>
         <label for="password">password</label><br>
         <input type="password"name="matkhau" placeholder="mat khau"id="password">
         <input type="hidden" name="redirect-to" value="http//unitop.vnN" id="">
