--- a/Unitop.vn/Front-end/lesson/html/comment.html
+++ b/Unitop.vn/Front-end/lesson/html/comment.html
@@ -8,9 +8,9 @@
 <body>
     <p>
         
-<!-- đay là comment   -->
+<!-- đay là comment   -->   test pusht after clone repository
 <!-- Ctrl  /  phím tắt tạo chú thích  -->
-<!-- hoặc bấm c tab nó sẻ tự động tạo ra -->
+<!-- hoặc bấm c tab nó sẻ tự độnggit add  tạo ra -->
 </p>
 <p>
     đây là đoạn văn . tôi tên là đoàn hoài nam
